k8s/library-management-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-management-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-management
  template:
    metadata:
      labels:
        app: library-management
    spec:
      containers:
        - name: library-management-container
          image: ahmedyehia32/library-system-final
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: ebs-storage
              mountPath: /data  # Path within the container where the PVC is mounted
      volumes:
        - name: ebs-storage
          persistentVolumeClaim:
            claimName: my-ebs-pvc
