k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myingress
    http:
      paths:
      - path: /service
        pathType: Prefix
        backend:
          service:
            name: library-management-service
            port:
              number: 80
